[package]
name = "hoosecalc"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust_decimal = "1.14"
rust_decimal_macros = "1.14"
#num-traits = "0.2"

[dev-dependencies]
# float-cmp = "0.8.0"
approx = "0.3"